docs: Update AGENTS.md, README.md, requirements.md, and user stories for improved clarity and consistency
- Translated and updated sections in AGENTS.md to provide a clear guide for agents, including project overview, main structure, data flow, and common commands.
- Revised README.md to enhance configuration instructions and security guidelines.
- Updated requirements.md to reflect the project overview and non-functional requirements in English.
- Improved user stories documentation for better understanding of acceptance criteria and implementation status.
- Ensured consistency in terminology and formatting across all documents.

--- a/docs/plans/US-001/US-001-BE-001.md
+++ b/docs/plans/US-001/US-001-BE-001.md
@@ -1,51 +1,51 @@
-# US-001-BE-001: Azure DevOps API接続設定とPAT認証実装
+# US-001-BE-001: Implement Azure DevOps API connection and PAT auth
 
 ## Task Overview
-Azure DevOps REST APIへの接続機能とPersonal Access Token (PAT)による認証機能を実装する。
+Implement connectivity to the Azure DevOps REST API and authentication via Personal Access Token (PAT).
 
 ## Acceptance Criteria
-- [x] Azure DevOps REST API v7.2への接続関数を作成
-- [x] PAT認証を使用したHTTPリクエスト送信機能
-- [x] API接続テスト機能（疎通確認）
-- [x] 認証エラー時の適切なエラーメッセージ表示
-- [x] 組織名とプロジェクト名のパラメータ化
+- [x] Create a connection function to Azure DevOps REST API v7.2
+- [x] Send HTTP requests using PAT authentication
+- [x] API connection test feature (connectivity check)
+- [x] Show appropriate error messages on auth errors
+- [x] Parameterize organization and project names
 
 ## Technical Requirements
-- curlコマンドを使用したHTTP通信
-- Base64エンコードによるPAT認証ヘッダー設定
-- HTTPステータスコードによるレスポンス判定
-- API バージョン 7.2 の使用
+- Use curl for HTTP communication
+- Set PAT auth header via Base64 encoding
+- Determine responses via HTTP status codes
+- Use API version 7.2
 
 ## Implementation Details
 ```bash
-# 実装対象関数
+# Target functions
 call_ado_api() {
     local endpoint="$1"
-    # curl -s -u ":${PAT}" でPAT認証
-    # HTTPステータスコード確認
-    # エラー時の適切な処理
+    # PAT auth with curl -s -u ":${PAT}"
+    # Check HTTP status code
+    # Proper handling on errors
 }
 
 test_api_connection() {
-    # API疎通テスト
-    # 認証確認
+    # API connectivity test
+    # Auth check
 }
 ```
 
 ## Definition of Done
-- [x] curlコマンドでAzure DevOps APIに正常接続できる
-- [x] 認証エラー時に明確なエラーメッセージが表示される
-- [x] API接続テストが成功する
-- [x] 組織名・プロジェクト名が環境変数で設定可能
+- [x] Azure DevOps API connects successfully via curl
+- [x] Clear error messages are shown on auth errors
+- [x] API connection test succeeds
+- [x] Organization and project names can be set via environment variables
 
 ## Dependencies
-- US-001-INF-001 (基本構造)
-- US-001-INF-003 (設定管理)
+- US-001-INF-001 (base structure)
+- US-001-INF-003 (configuration management)
 
 ## Estimated Effort
 2-3 hours
 
 ## Testing Strategy
-- 正常なPATでの接続テスト
-- 無効なPATでのエラー処理テスト
-- ネットワークエラー時の動作確認
+- Connection test with a valid PAT
+- Error handling test with an invalid PAT
+- Behavior check on network errors
