--- a/docs/userstories/US-001.md
+++ b/docs/userstories/US-001.md
@@ -1,27 +1,27 @@
-# Azure DevOpsからチケット履歴を抽出する
+# Extract ticket history from Azure DevOps
 
-## ストーリー
-As a システム
-I want Azure DevOps APIを使用してチケットのステータス変更履歴を取得する
-So that 開発者の作業実績を自動的に追跡できる
+## Story
+As a system
+I want to fetch ticket status change history using the Azure DevOps API
+So that I can automatically track developer work records
 
-## 受け入れ条件
-- [x] Azure DevOps APIに接続できる ✅ (US-001-BE-001)
-- [x] 指定されたプロジェクトのチケット一覧を取得できる ✅ (US-001-BE-002)
-- [x] 各チケットのステータス変更履歴（日時、変更前ステータス、変更後ステータス、変更者）を取得できる ✅ (US-001-BE-003)
-- [x] チケット番号、タイトル、担当者情報を取得できる ✅ (US-001-BE-002)
-- [x] チケット詳細情報（タイプ、優先度、見積もり時間等）を取得できる ✅ (US-001-BE-004)
-- [x] API接続エラー時に適切なエラーメッセージを表示する ✅ (US-001-BE-001, BE-005 - 包括的エラーハンドリング実装済み)
-- [x] 取得したデータをローカルJSONファイルに保存できる ✅ (US-001-INF-002)
-- [ ] 精度評価が実施されている（95%以上の精度要件）
+## Acceptance criteria
+- [x] Connect to the Azure DevOps API ✅ (US-001-BE-001)
+- [x] Fetch the ticket list for a specified project ✅ (US-001-BE-002)
+- [x] Fetch status change history for each ticket (timestamp, status before, status after, changed by) ✅ (US-001-BE-003)
+- [x] Fetch ticket ID, title, and assignee information ✅ (US-001-BE-002)
+- [x] Fetch ticket details (type, priority, estimate, etc.) ✅ (US-001-BE-004)
+- [x] Show appropriate error messages on API connection errors ✅ (US-001-BE-001, BE-005 - comprehensive error handling implemented)
+- [x] Save fetched data to local JSON files ✅ (US-001-INF-002)
+- [ ] Accuracy evaluation has been performed (95%+ accuracy requirement)
 
-## 補足
-Azure DevOps REST APIを使用して、Work Itemsのステータス変更履歴を取得する。認証にはPersonal Access Token (PAT)を使用する。大量のデータ取得時はページネーションとレート制限を考慮する必要がある。
+## Notes
+Use the Azure DevOps REST API to fetch status change history for Work Items. Authentication uses a Personal Access Token (PAT). When fetching large amounts of data, pagination and rate limits must be considered.
 
-## 実装完了機能（US-001-BE-005）
-- **包括的エラーハンドリング**: 全HTTPエラー（4xx、5xx）とネットワークエラーに対する詳細な対処法提供
-- **指数バックオフリトライ**: 効率的な自動リトライ機能（最大300秒まで段階的増加）
-- **レート制限対応**: Retry-Afterヘッダー解析による適切な待機時間設定
-- **チェックポイント/復旧**: プロセス中断時の自動復旧機能
-- **タイムスタンプ付きログ**: すべての処理ログに時刻情報を付与
-- **設定可能なリトライパラメータ**: 環境変数による柔軟な設定
+## Implemented features (US-001-BE-005)
+- **Comprehensive error handling**: detailed guidance for all HTTP errors (4xx, 5xx) and network errors
+- **Exponential backoff retry**: efficient automatic retry (gradually increasing up to 300 seconds)
+- **Rate limit handling**: set appropriate wait time by parsing the Retry-After header
+- **Checkpoint/recovery**: automatic recovery after interruption
+- **Timestamped logs**: add timestamps to all process logs
+- **Configurable retry parameters**: flexible settings via environment variables
