--- a/docs/userstories/US-002.md
+++ b/docs/userstories/US-002.md
@@ -1,21 +1,21 @@
-# 作業期間を計算する
+# Calculate work periods
 
-## ストーリー
-As a システム
-I want チケットのDoing開始からDone完了までの期間を計算し、Blocked期間を除外する
-So that 実際の作業時間を正確に把握できる
+## Story
+As a system
+I want to calculate the period from Doing start to Done completion and exclude Blocked periods
+So that I can accurately capture actual work time
 
-## 実装状況
-現行実装では未対応（対応予定）。
+## Implementation status
+Not supported in the current implementation (planned).
 
-## 受け入れ条件
-- [ ] チケットのステータスが「Doing」に変更された日時を特定できる
-- [ ] チケットのステータスが「Done」に変更された日時を特定できる
-- [ ] Doing開始からDone完了までの期間を計算できる
-- [ ] ステータスが「Blocked」だった期間を特定できる
-- [ ] 作業期間からBlocked期間を除外できる
-- [ ] 営業日のみを考慮した作業期間を計算できる
-- [ ] 90%以上の精度で作業期間を特定できる
+## Acceptance criteria
+- [ ] Identify the timestamp when a ticket status changes to "Doing"
+- [ ] Identify the timestamp when a ticket status changes to "Done"
+- [ ] Calculate the period from Doing start to Done completion
+- [ ] Identify the periods when status was "Blocked"
+- [ ] Exclude Blocked periods from the work period
+- [ ] Calculate work periods considering business days only
+- [ ] Identify work periods with 90%+ accuracy
 
-## 補足
-チケットが複数回DoingとBlockedの間を行き来する場合も考慮する必要がある。また、営業日カレンダーを参照して、土日祝日を除外した実作業日数も計算する。
+## Notes
+Need to handle tickets that move between Doing and Blocked multiple times. Also reference a business calendar to compute actual work days excluding weekends and holidays.
