--- a/docs/userstories/US-003.md
+++ b/docs/userstories/US-003.md
@@ -1,21 +1,21 @@
-# チームの月次作業サマリーを確認する
+# Review team monthly work summary
 
-## ストーリー
-As a プロジェクトマネージャー
-I want チーム全体の月間作業時間と成果を確認する
-So that プロジェクトの月次報告と人員管理ができる
+## Story
+As a project manager
+I want to review the team's monthly work time and outcomes
+So that I can do monthly reporting and staffing management
 
-## 実装状況
-現行実装では未対応（作業記録テーブルの生成まで対応）。
+## Implementation status
+Not supported in the current implementation (supports only work record table generation).
 
-## 受け入れ条件
-- [ ] 月を指定してチーム全体の作業サマリーを表示できる
-- [ ] 各メンバーの月間総作業時間が表示される
-- [ ] 各メンバーが作業したチケットの一覧が表示される
-- [ ] チーム全体の総作業時間が集計される
-- [ ] 共通イベントへの参加時間が含まれる
-- [ ] 前月・翌月のサマリーに簡単に移動できる
-- [ ] サマリーを印刷用レイアウトで表示できる
+## Acceptance criteria
+- [ ] Show a team-wide work summary for a specified month
+- [ ] Show each member's total monthly work time
+- [ ] Show a list of tickets each member worked on
+- [ ] Aggregate total team work time
+- [ ] Include time spent in shared events
+- [ ] Easily move to previous/next month summaries
+- [ ] Show the summary in a print-friendly layout
 
-## 補足
-月次サマリーは経営層への報告に使用されるため、見やすく整理されたフォーマットで表示する。各メンバーの稼働率や生産性の指標となる情報も含める。
+## Notes
+Monthly summaries are used for reporting to management, so display them in a clear, organized format. Include information that serves as indicators of each member's utilization and productivity.
