--- a/docs/userstories/US-004.md
+++ b/docs/userstories/US-004.md
@@ -1,21 +1,21 @@
-# 月次作業サマリーを自動生成する
+# Automatically generate monthly work summaries
 
-## ストーリー
-As a システム
-I want 月末に自動的に月次サマリーレポートを生成する
-So that 月次報告の準備作業を自動化できる
+## Story
+As a system
+I want to automatically generate monthly summary reports at the end of each month
+So that I can automate the preparation of monthly reports
 
-## 実装状況
-現行実装では未対応（cron 等で `fetch` と `generate-work-table` を組み合わせて運用可能）。
+## Implementation status
+Not supported in the current implementation (can be operated by combining `fetch` and `generate-work-table` via cron, etc.).
 
-## 受け入れ条件
-- [ ] 毎月月末に自動的にサマリー生成処理が実行される
-- [ ] 全メンバーの月間作業実績を集計できる
-- [ ] 各メンバーの総作業時間とチケット一覧が含まれる
-- [ ] 共通イベントの参加実績が含まれる
-- [ ] サマリー生成完了時に管理者に通知される
-- [ ] サマリー生成エラー時に管理者に通知される
-- [ ] 10分以内にサマリー生成が完了する
+## Acceptance criteria
+- [ ] Automatically run summary generation at the end of each month
+- [ ] Aggregate monthly work records for all members
+- [ ] Include each member's total work time and ticket list
+- [ ] Include participation records for shared events
+- [ ] Notify administrators when summary generation completes
+- [ ] Notify administrators when summary generation fails
+- [ ] Complete summary generation within 10 minutes
 
-## 補足
-月次サマリーは月末最終営業日の夜間に実行される。生成されたサマリーはデータベースに保存され、翌営業日の朝から確認できる。過去の月次サマリーも再生成可能とする。
+## Notes
+The monthly summary runs at night on the last business day of the month. The generated summary is stored in a database and can be reviewed from the next business morning. Past monthly summaries should be regeneratable.
