--- a/docs/userstories/US-005.md
+++ b/docs/userstories/US-005.md
@@ -1,24 +1,24 @@
-# チーム作業レポートをエクスポートする
+# Export team work reports
 
-## ストーリー
-As a プロジェクトマネージャー
-I want チーム全体の月次作業レポートを複数の形式でエクスポートする
-So that 様々な用途に柔軟に活用できる
+## Story
+As a project manager
+I want to export the team's monthly work report in multiple formats
+So that it can be used flexibly for various purposes
 
-## 実装状況
-現行実装では未対応（Markdown の作業記録テーブル生成のみ対応）。
+## Implementation status
+Not supported in the current implementation (only markdown work record table generation).
 
-## 受け入れ条件
-- [ ] 月を指定してエクスポートできる
-- [ ] 複数のフォーマット（JSON、Markdown、Excel）を選択できる
-- [ ] 全メンバーの月間作業実績が含まれる
-- [ ] 各メンバーの月間合計作業時間が含まれる
-- [ ] チケット一覧（番号、タイトル）が含まれる
-- [ ] ファイル名にプロジェクト名と期間が含まれる
-- [ ] エクスポート処理が1分以内に完了する
+## Acceptance criteria
+- [ ] Export by specifying a month
+- [ ] Select multiple formats (JSON, Markdown, Excel)
+- [ ] Include monthly work records for all members
+- [ ] Include total monthly work time for each member
+- [ ] Include a ticket list (ID, title)
+- [ ] Include project name and period in the filename
+- [ ] Complete export within 1 minute
 
-## 補足
-- JSON形式：システム間連携や自動化処理に適している
-- Markdown形式：ドキュメント化や共有に適している  
-- Excel形式：経営層への報告書として利用可能
-ファイル名は「[プロジェクト名](YYYY年MM月)稼働実績明細.[拡張子]」の形式で命名される。
+## Notes
+- JSON format: suitable for system integrations and automation
+- Markdown format: suitable for documentation and sharing
+- Excel format: usable for management reports
+The filename is in the form "[ProjectName](YYYYMM)work-record-detail.[ext]".
